# looper

./: .gitignore  AGENTS.md  Cargo.toml  README.md
looper-agent/: Cargo.toml  PEAS.md  README.md  SETTINGS.md
looper-agent/external-plugins/blogging-starter/: README.md  looper-plugin.json  main.ts
looper-agent/external-plugins/cybersecurity-starter/: README.md  looper-plugin.json  main.ts
looper-agent/external-plugins/reference-inspector/: README.md  looper-plugin.json  main.ts
looper-agent/plugins/filesystem-read/: looper-plugin.json  main.ts
looper-agent/plugins/internal-chat/: looper-plugin.json  main.ts
looper-agent/src/: dto.rs  http.rs  lib.rs  main.rs  model.rs  models.rs  plugin_contract.rs  runtime.rs  storage.rs
looper-agent/src/peas/: mod.rs
looper-agent/src/settings/: mod.rs
looper-common/: Cargo.toml
looper-common/src/: lib.rs
looper-discovery/: Cargo.toml  README.md
looper-discovery/src/: main.rs
looper-harness/: Cargo.toml
looper-harness/src/: dto.rs  executors.rs  http.rs  lib.rs  model.rs  models.rs  runtime.rs  storage.rs
looper-peas/: Cargo.toml  README.md
looper-plugins/contracts/: plugin-route-v1.json
looper-plugins/internal/git-commit-guard/: README.md  looper-plugin.json  mod.ts  mod_test.ts
looper-settings/: Cargo.toml  README.md
looper-terminal/: Cargo.toml  README.md
looper-terminal/src/: main.rs
looper-web/: next.config.ts  package-lock.json  package.json
looper-web/app/: dashboard.tsx  layout.tsx  page.tsx
looper-web/app/actuators/[actuatorName]/: page.tsx
looper-web/app/actuators/action-history/: page.tsx
looper-web/app/actuators/add/: page.tsx
looper-web/app/actuators/all/: page.tsx
looper-web/app/actuators/plugins/add/: page.tsx
looper-web/app/actuators/plugins/all/: page.tsx
looper-web/app/agent-settings/identity/: page.tsx
looper-web/app/agent-settings/loop-configuration/: page.tsx
looper-web/app/agent-settings/providers-models/: page.tsx
looper-web/app/api/dashboard/: route.ts
looper-web/app/conversations/chat-history/: page.tsx
looper-web/app/conversations/new-chat/: page.tsx
looper-web/app/sensors/[sensorName]/: page.tsx
looper-web/app/sensors/add/: page.tsx
looper-web/app/sensors/all/: page.tsx
looper-web/app/sensors/percept-history/: page.tsx
looper-web/components/actuators/: ActionHistoryClient.tsx  ActuatorDetailClient.tsx  ActuatorFormFields.tsx  AddActuatorClient.tsx
looper-web/components/agent-settings/: AgentIdentityPanel.tsx  LoopConfigurationPanel.tsx
looper-web/components/conversations/: ChatClient.tsx  ChatHistoryClient.tsx  storage.ts
looper-web/components/dashboard/: ActionsPanel.tsx  ActuatorsPanel.tsx  LoopRing.tsx  LoopStatePanel.tsx  PerceptsPanel.tsx  SensorsPanel.tsx  SetupWizard.tsx  types.ts  useDashboardSocket.ts  useSetupFlow.tsx
looper-web/components/sensors/: AddSensorClient.tsx  PerceptHistoryClient.tsx  SensorDetailClient.tsx  SensorFormFields.tsx  SensorIngressFields.tsx
looper-web/components/window/: BlankWorkspacePage.tsx  HeaderBar.tsx  ReadOnlyDetailsModal.tsx  SideNav.tsx  WorkspaceShell.tsx
plugins/git-commit-guard/: README.md  looper-plugin.json  mod.ts
(+1 files in other folders)
