[package]
name = "looper-agent"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
axum = { version = "0.8", features = ["ws"] }
fiddlesticks = { workspace = true, features = ["provider-ollama", "provider-openai", "provider-opencode-zen"] }
glob = "0.3"
regex = "1.11"
rusqlite = { version = "0.33.0", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "=1.48.0", features = ["macros", "rt-multi-thread", "time", "sync", "net"] }
walkdir = "2.5"
