[package]
name = "looper-agent"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
looper-common = { path = "../looper-common" }
rusqlite = { version = "0.33", features = ["bundled"] }
fiddlesticks = { path = "../../fiddlesticks/fiddlesticks", default-features = false, features = ["provider-openai", "provider-anthropic", "provider-opencode-zen"] }
async-stream = "0.3"
globset = "0.4"
regex = "1"
walkdir = "2"
