[package]
name = "looper-harness"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
axum = "0.8"
fiddlesticks = { workspace = true, features = ["provider-ollama"] }
glob = "0.3"
regex = "1.11"
rusqlite = { version = "0.33.0", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "=1.48.0", features = ["macros", "rt-multi-thread", "time", "sync"] }
walkdir = "2.5"
