[package]
name = "looper-terminal"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
looper-harness = { path = "../looper-harness" }
axum = "0.8"
tokio = { version = "=1.48.0", features = ["macros", "rt-multi-thread", "net"] }
ratatui = "0.29"
ratatui-widgets = "0.3"
crossterm = "0.29"
fiddlesticks = { workspace = true, features = ["provider-ollama", "provider-opencode-zen"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde_json = "1.0"
arboard = "3.6"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
