[package]
name = "looper"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
crossterm = "0.28"
futures-util = "0.3"
looper-common = { path = "../looper-common" }
ratatui = "0.30"
ratatui-widgets = "0.3"
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
